data/derived/sp14/progs/unify/prog1897.ml.out
Characters 32-70:
  let rec mulByDigit i l = bigAdd (bigAdd (l l), (mulByDigit (i - 1) l));;
                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
